--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "2.1.6",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "jsdom": "^25.0.1",
